# ccs

./: .gitignore  README.md  pyproject.toml
data/dictionary/: XDHYCD7th_words.txt  cedict_words.txt
data/vocabulary/characters/hsk_new/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
data/vocabulary/characters/hsk_old/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
data/vocabulary/words/hsk_new/: 2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
data/vocabulary/words/hsk_old/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
scripts/: extract_cc-cedict.py  extract_xiandai-hanyu-cidian.py
src/ccs/: comprehension_report.py  constants.py  generate_vocab.py  io.py  plotting.py  utils.py
