[project]
name = "ccs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "polars>=1.30.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.11.13",
]
